Avoid custom font and (hopefully) improve legibility

--- a/index.styl
+++ b/index.styl
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400,900');
-
 $font-color = #24292e
 
 html
@@ -13,7 +11,7 @@ body
 	box-sizing border-box
 	max-width 46em
 
-	font-family 'Lato', sans-serif
+	font-family -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif
 	font-size 16px
 	line-height 1.3
 	color $font-color
